Put the list of files on the homepage

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@ layout: cascade
 
   <h1>Hello Cascade Assets!</h1>
 
-  <p>You look great today!</p>
-
-  <a href="javascript:;">Here is a link!</a> 
+  {% include cascade.html %}
 
 </div>
