--- a/pages/logo.html
+++ b/pages/logo.html
@@ -3,8 +3,4 @@ layout: cascade
 title: "Logo"
 ---
 		
-		<a class="logo" href="../index.aspx" itemscope="itemscope" itemtype="http://schema.org/Organization">
-            <span itemprop="name">Chapman University</span>
-        </a>
-        
-        
+{% include logo.html %}
