--- a/pages/page-title.html
+++ b/pages/page-title.html
@@ -3,10 +3,4 @@ layout: cascade
 title: "Page Title"
 ---
 		
-		<div class="primaryContent">
-            <div class="main">
-                <h1>Chapman University - A Whole World Awaits You</h1>
-            </div>      
-        </div>
-        
-    
+{% include page-title.html %}
