--- a/pages/twitter-feed.html
+++ b/pages/twitter-feed.html
@@ -2,9 +2,6 @@
 layout: cascade
 title: "Twitter Feed"
 ---
-		
-		<div class="tweetbox">
-            <a class="twitter-timeline" data-widget-id="369853434184228865" href="https://twitter.com/search?q=greek+life">Tweets about "LifeatCU"</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-        </div>
+
+{% include twitter-feed.html %}
         
