Added layout files

--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 ---
-layout: cascade
+layout: 2_column
 ---
 
-<div class="home">
-
-  <h1>Hello Cascade Assets!</h1>
-
-  {% include cascade.html %}
-
-</div>
+<h1>Hello Cascade Assets!</h1>
+{% include cascade.html %}
