Optimized Guardfile, fixed image links.

--- a/2_column_module_sample.html
+++ b/2_column_module_sample.html
@@ -1,4 +1,12 @@
 ---
 title: 2 Column Module Sample
 layout: 2_column_modular
+
+primary_content:
+  - carousel
+  - personnel-region
+
+left_column:
+  - cta-buttons
+
 ---
