--- a/images.html
+++ b/images.html
@@ -47,7 +47,15 @@ layout: docs
 {% image placeholder/2_column_modular_screenshot.png %}
 {% image placeholder/3_column_modular_screenshot.png %}
 {% image placeholder/chapman.jpg %}
+{% image placeholder/musco.jpg %}
 {% image placeholder/react.jpg %}
+{% image placeholder/user_1.jpg %}
+{% image placeholder/user_2.jpg %}
+{% image placeholder/user_3.jpg %}
+{% image placeholder/user_4.jpg %}
+{% image placeholder/user_5.jpg %}
+{% image placeholder/user_6.jpg %}
+{% image placeholder/user_7.jpg %}
 {% image placeholder/www.jpg %}
 {% image ribbon_tails.png %}
 {% image scst_follow_us.png %}
