Created deployment workflow and started organizing javascript

--- a/2_column_module_sample.html
+++ b/2_column_module_sample.html
@@ -3,8 +3,9 @@ title: 2 Column Module Sample
 layout: 2_column_modular
 
 primary_content:
-  - carousel
+  - three-box-callout
   - personnel-region
+  - carousel
 
 left_column:
   - cta-buttons
